# codex

./: README.md
.github/workflows/: android-release-a1a.yml  android-release.yml  android-release.yml.disabled  android-v8-investigate-mac.yml  android-v8-investigate.yml  android-v8-investigate.yml.disabled  rust-ci-full.yml  rust-ci-full.yml.disabled  v8-android-prebuilt-mac.yml  v8-android-prebuilt.yml  v8-canary.yml
aidocs/: ANDROID-CI-SESSION.md
codex-rs/: Cargo.toml
codex-rs/app-server/: README.md
codex-rs/app-server-protocol/src/: export.rs
codex-rs/app-server/src/: message_processor.rs  request_processors.rs
codex-rs/arg0/src/: lib.rs
codex-rs/cli/: Cargo.toml
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/config/src/: types.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core-api/src/: lib.rs
codex-rs/core/src/: codex_thread.rs  hook_runtime.rs  installation_id.rs  lib.rs  shell.rs  shell_tests.rs  util.rs
codex-rs/lmstudio/: Cargo.toml
codex-rs/rollout-trace/: Cargo.toml
codex-rs/rollout-trace/src/: code_cell.rs  tool_dispatch.rs
codex-rs/scripts/: build-codex.sh  build-fork.sh
codex-rs/shell-command/: Cargo.toml
codex-rs/shell-command/src/: shell_detect.rs
codex-rs/thread-manager-sample/src/: main.rs
codex-rs/tools/: Cargo.toml
codex-rs/tools/src/: lib.rs  tool_registry_plan.rs  tool_registry_plan_tests.rs  tool_registry_plan_types.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app_command.rs  app_event.rs  app_event_sender.rs  app_server_session.rs  chatwidget.rs  (+7 more)
docs/: LINUX-CHROMIUM-SOURCE.md  config.md
(+53 files in other folders)
