[package]
edition.workspace = true
license.workspace = true
name = "codex-tools"
version.workspace = true

[features]
default = ["code-mode"]
code-mode = ["dep:codex-code-mode"]

[lints]
workspace = true

[dependencies]
codex-code-mode = { workspace = true, optional = true }
codex-protocol = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
